<resources>
    <string name="app_name">RFID Tools</string>
    <string name="help">Help</string>
    <string name="result">Result</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="tips">Tips</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="go2">goto</string>
    <string name="neverNotify">NeverNotify</string>
    <string name="forget">Forget</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="backup">Backup</string>
    <string name="recovery">Recovery</string>
    <string name="unsupport">Unsupported</string>
    <string name="ok">OK</string>
    <string name="buy">Buy</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="help_union_key">
        你可算是问到点子上了，联动密钥其实就是一个运行时被各种工具收集到的密钥，
        比如全加测试、半加测试、读写卡，而联动密钥最终又可以被上述的工具利用上，这就是联合动作!对了，
        对于保存的密钥文件,为了方便本程序提供了一个默认的名字，有需要请自行更改，否则会覆盖保存的喔！！!
    </string>
    <string name="tips_hardnested">警告，警告，警告，三次警告，您当前进入得是实验室功能，您必须保证您的设备性能足够优秀，否则请取消您的操作，否则！接下来出现得一切问题，都将归为您的设备性能导致，包括卡顿，包括闪退，开发团队暂不接受此类Bug提交!</string>
    <string name="device_no_connect">Device is not connect!</string>
    <string name="sniff_not_support">很抱歉，此固件暂不支持嗅探，有嗅探的需要请先使用官方3.1固件!</string>
    <string name="tips_mainPageColumnCountError">您的主页面每行元素个数小于等于零，自动修正为4!</string>
    <string name="tips_mainPageColumnCountErrorFaild">自动修正失败,请检查文件是否存在或者是否有读写权限！</string>
    <string name="tips_mainPageColumnCountTooBig">您的主页面每行元素个数大于5，可能会出现显示问题!</string>
    <string name="tips_standard_nfc_device">您好，您当前的设备使用的是标准NFC设备， 由于Android的限制，我们无法操作高级的设备相关， 因此需要此类操作的半加测试，全加测试，模拟卡片，等等高级功能将无法使用!</string>
    <string name="tips_please_not_horizontal_screen">请尽量不切换为横屏，以免出现UI错乱!</string>
    <string name="tips_union_key_save">发现您的联动密钥可能存在多个，是否需要保存到文件！下次使用？</string>
    <string name="mfoc">Mfoc</string>
    <string name="mfcuk">Mfcuk</string>
    <string name="hardnested">Hardnested</string>
    <string name="nfclist">Nfc-list</string>
    <string name="emulate">Emulate</string>
    <string name="readtag">Read</string>
    <string name="writetag">Write</string>
    <string name="hardFirmWare">HW</string>
    <string name="lfrw">LF-RW</string>
    <string name="hfread">HF-Read</string>
    <string name="hfwrite">HF-Write</string>
    <string name="hfsniff">HF-Sniff</string>
    <string name="hf14a">HF-14A</string>
    <string name="hfmfNested">HF-Nested</string>
    <string name="hfmfDarkside">HF-PRNG</string>
    <string name="chameleon">Chameleon</string>
    <string name="commonTools">Tools</string>
    <string name="aboutApp">About</string>
    <string name="appSettings">Settings</string>
    <string name="usage">Usage</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="joinGroup">JoinGroup</string>
    <string name="contactDev">ContactDev</string>
    <string name="sendLog">SendLog</string>
    <string name="clearData">ClearData</string>
    <string name="checkUpdate">CheckUpdate</string>
    <string name="disclaimer_title">用户协议与免责申明</string>
    <string name="logList">LogList</string>
    <string name="clear">Clear</string>
    <string name="tipls_clearData">You are currently applying to empty any data in the App "Nfc Tools" directory. The current operation is irreversible. You will lose all historical data. Is it empty?</string>
    <string name="cleaning">Cleanning.....</string>
    <string name="clearFinish">Clear finish, will auto restart.....</string>
    <string name="version">Version</string>
    <string name="device_connect_empty">Not found device, Dropdown refresh.....</string>
    <string name="menu_title_newDevice">New Devices</string>
    <string name="menu_title_allDevice">All Devices</string>
    <string name="poweredByWhat">Distributed by RRG\nPowered by ProxGrind</string>
    <string name="common_tools">Common Tools</string>
    <string name="device_init_success">Device init success!</string>
    <string name="init_failed">init failed</string>
    <string name="device_name_proxmark3_rdv4rrg">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;&lt;big&gt;Proxmark3&lt;/big&gt;&lt;/big&gt;&lt;big&gt; Rdv4.0&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Firmware: RRG、PROXGRIND&lt;/p&gt;&lt;p&gt;&lt;small&gt;(OTG, Bluetooth)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="name_common_tools">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;Common&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Such as: DumpEditor&lt;/p&gt;&lt;p&gt;&lt;small&gt;(Dump, Key)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="main_app_about">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;About&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Developer: DXL&lt;p&gt;&lt;/p&gt;(RRG、PROXGRIND)&lt;/p&gt;&lt;p&gt;&lt;small&gt;(Help, Update)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="function_name_red_team">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;&lt;big&gt;Red Team&lt;/big&gt;&lt;/big&gt;&lt;big&gt; Terminal&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Support: RRG、PROXGRIND&lt;/p&gt;&lt;p&gt;&lt;small&gt;(HF, LF)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="function_name_rdv4rrg_reader">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;&lt;big&gt;Reader&lt;/big&gt;&lt;/big&gt;&lt;big&gt; UI&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Support: Read、Write&lt;/p&gt;&lt;p&gt;&lt;small&gt;(HF)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="function_name_scanner">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;&lt;big&gt;Scanner&lt;/big&gt;&lt;/big&gt;&lt;big&gt; Automatic&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Support: HF, LF&lt;/p&gt;&lt;p&gt;&lt;small&gt;(IC&lt;13.56MHZ&gt;, ID&lt;125KHZ or other &gt;)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="discovery_device">Discovering</string>
    <string name="history_device">Existing Devices</string>
    <string name="title_rdv4_function">Rdv4.0 Function</string>
    <string name="title_devices_main"><![CDATA[Devices & Firmwares]]></string>
    <string name="console_send">Send</string>
    <string name="console_clear_screen">Clear</string>
    <string name="console_stop_exe">Stop</string>
    <string name="console_gui">GUI</string>
    <string name="console_dynamic_btn">Easy Button</string>
    <string name="standard_output">Standard Output:</string>
    <string name="screen_scale">| Scale</string>
    <string name="tips_no_input"><![CDATA[Tips: “Standard output” Slide down & up available !]]></string>
    <string name="other_output">Other Outputs:</string>
    <string name="output_err">Output Error</string>
    <string name="output_log">Log</string>
    <string name="pm3_hint"><![CDATA[pm3 —>]]></string>
    <string name="command_input_hint"><![CDATA[Command Input <—]]></string>
    <string name="com_err_tips">Communication error, please check permission or voltage!</string>
    <string name="com_normal_tips">Communication normall</string>
    <string name="device_init_err">Device init error, please check your client version…</string>
    <string name="title_connecting">Connecting in progress!</string>
    <string name="title_connect_cancel">Cancel</string>
    <string name="cancel_tips">Restart in progress!</string>
    <string name="progress_msg">Currently you have a task running，please wait for task to finish!</string>
    <string name="tips_gui_not_support">Not yet supported or not required!</string>
    <string name="title_panel">Easy Button Panel</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="tips_task_stop">Currently you have a task running，may be a loop task，will auto stop and remove!</string>
    <string name="tips_stop_task_msg">This APP can only terminate the tasks at the software layer. If the PM3 task execution prompt light still flickers, please restart PM3!</string>
    <string name="tips_pm3_version">If version incorrect，It may cause disconnection or some exceptions during use.</string>
    <string name="command_input">Command Input</string>
    <string name="title_input">Title Input</string>
    <string name="button_edit">Button Edit</string>
    <string name="enter_delete">Are you sure you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="btn_add">Button Add</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="dump_edit_save">Save</string>
    <string name="dump_edit_delete">Delete</string>
    <string name="Open">Open</string>
    <string name="rename">Rename</string>
    <string name="difference">Difference</string>
    <string name="dump_edit_key_extract">KeysExtract</string>
    <string name="dump_edit_data_shared">Shared</string>
    <string name="root">SdcardRoot</string>
    <string name="wechat">Wechat</string>
    <string name="Default">Default</string>
    <string name="res">Res:</string>
    <string name="pm3">PM3</string>
    <string name="title_select_dump_file">Please select dump file!</string>
    <string name="title_dump_save_mode">Please select save mode!</string>
    <string name="newFile">newFile</string>
    <string name="input_err">Input Error!</string>
    <string name="cover">Cover</string>
    <string name="title_dump_select_cover">Select the file to overwrite</string>
    <string name="title_dump_delete">Delete Dump File</string>
    <string name="delete_success">Delete success:</string>
    <string name="delete_failed">Delete failed:</string>
    <string name="cant_select_not_file">Can not select not file!</string>
    <string name="data_err">Data error!</string>
    <string name="data_name_dafault">Normal Data</string>
    <string name="title_shared_dump_file">Shared your dump</string>
    <string name="newName">New Name</string>
    <string name="illegal_filenames">Illegal filenames!</string>
    <string name="dump_parse_failed">Failure to parse data!</string>
    <string name="dump_4k_no_support">4K Tag not supported.</string>
    <string name="data_parse_err">Parse data package failed</string>
    <string name="data_fragmentary">Fragmentary data, can not show in view, must have 1k or 2k or 4k!</string>
    <string name="file_err">File exception.</string>
    <string name="format_no_support">Format not supported.</string>
    <string name="data_edit">Data Editor</string>
    <string name="key_editor">Keys Editor</string>
    <string name="data_diff">Data Diff</string>
    <string name="format_covert">Format Converter</string>
    <string name="union_keys">Union Keys</string>
    <string name="no_select">No select</string>
    <string name="diff_result">Result:</string>
    <string name="about_enjoy_msg">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;Developer&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Team: DXL、Olaf tan、Dennis Goh&lt;/p&gt;&lt;p&gt;&lt;small&gt;Enjoy yourself :)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="go2_proxgrind_website">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;Powered&lt;/big&gt;&lt;/p&gt;&lt;p&gt;By: ProxGrind&lt;/p&gt;&lt;p&gt;&lt;small&gt;Click go to web site&lt;/small&gt;&lt;/p&gt;</string>
    <string name="go2_rrg_website">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;Distributed&lt;/big&gt;&lt;/p&gt;&lt;p&gt;By: RFID Research Group (RRG)&lt;/p&gt;&lt;p&gt;&lt;small&gt;Click go to web site&lt;/small&gt;&lt;/p&gt;</string>
    <string name="language">Language</string>
    <string name="following_system">Following System</string>
    <string name="settings">Settings</string>
    <string name="chinese_simple">中文简体</string>
    <string name="english">English</string>
    <string name="functions">Functions</string>
    <string name="reader">Reader</string>
</resources>