<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_act_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/toolbarStyle"
        app:popupTheme="@style/popMenuStyle"
        app:title="@string/settings" />

    <LinearLayout
        android:id="@+id/linearLayout_readerViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/gradual"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_grey_200"
            android:padding="10dp"
            android:text="@string/language"
            android:textSize="10sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_grey_200" />

        <RadioGroup
            android:id="@+id/rdoGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <RadioButton
                android:id="@+id/rdoBtnLanguageAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/following_system" />

            <RadioButton
                android:id="@+id/rdoBtnLanguageChineseSimple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/chinese_simple" />

            <RadioButton
                android:id="@+id/rdoBtnLanguageEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/english" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>