<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/toolbarStyle"
        app:popupTheme="@style/popMenuStyle"
        app:title="@string/aboutApp" />

    <TextView
        android:id="@+id/txtShowAppVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="6dp"
        android:text="NFC工具集 1.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtShowAppVersion"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:id="@+id/logoGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <cn.dxl.common.widget.HtmlTextButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradual"
                android:drawableEnd="@drawable/dxl_logo_128"
                android:gravity="start|center"
                android:padding="16dp"
                android:paddingEnd="28dp"
                android:text="@string/about_enjoy_msg"
                android:textAllCaps="false" />


            <cn.dxl.common.widget.HtmlTextButton
                android:id="@+id/btnGo2ProxgrindWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_shadow"
                android:drawableEnd="@drawable/proxgrindlogo"
                android:gravity="start|center"
                android:padding="16dp"
                android:paddingEnd="28dp"
                android:text="@string/go2_proxgrind_website"
                android:textAllCaps="false" />

            <cn.dxl.common.widget.HtmlTextButton
                android:id="@+id/btnGo2RRGWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_shadow"
                android:drawableEnd="@drawable/rrglogo"
                android:gravity="start|center"
                android:padding="16dp"
                android:paddingEnd="28dp"
                android:text="@string/go2_rrg_website"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="28dp"
        android:background="@color/md_grey_100"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/txtAppSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/main_settings"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/appSettings" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_300" />

            <TextView
                android:id="@+id/txtUserHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/help_blue"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/usage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_300"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtDisclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/disclaimer_blue"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/disclaimer" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_300" />

            <TextView
                android:id="@+id/txtJoinQQGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/qq_group_blue"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/joinGroup" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_300" />

            <TextView
                android:id="@+id/txtContactDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/dev_blue"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/contactDev" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_300" />

            <TextView
                android:id="@+id/txtSendLogFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/share"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/sendLog" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_300" />

            <TextView
                android:id="@+id/txtCleanData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/clear_blue"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/clearData" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_300" />

            <TextView
                android:id="@+id/txtCheckUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/update_blue"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/checkUpdate" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_300" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>